# church-members-call

./: README.md  pyproject.toml
app/: settings.py  urls.py
calls/: admin.py  models.py
calls/migrations/: 0001_initial.py  0002_remove_classlesson_students_classlesson_students.py  0003_classreport_remove_teacher_school_class_and_more.py
